[metadata]
name = osml-tile-server
version = 1.0.0
description = A minimalistic tile server for imagery hosted in the cloud
long_description = file: README.md
long_description_content_type = text/markdown
author = Amazon Web Services
author_email = aws-osml-admin@amazon.com
license =
    © 2023 Amazon Web Services, Inc. or its affiliates. All Rights Reserved.
    This AWS Content is provided subject to the terms of the AWS Customer Agreement
    available at http://aws.amazon.com/agreement or other written agreement between
    Customer and either Amazon Web Services, Inc. or Amazon Web Services EMEA SARL or both.
project_urls =
    Source = https://github.com/aws-solutions-library-samples/osml-tile-server
    Tracker = https://github.com/aws-solutions-library-samples/osml-tile-server/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.9
include_package_data = True

install_requires =
    uvicorn
    fastapi
    starlette[full]
    boto3
    osml-imagery-toolkit>=1.1.1

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_data =
    = ["py.typed"]

[options.extras_require]
test =
    tox
