[metadata]
name = osml-tile-server
version = 0.3.0
description = The OversightML Tile Server is a lightweight, cloud-based tile server which allows you to quickly pass an image from S3 bucket to get metadata, image statistics, and set of tiles in real-time.
long_description = file: README.md
long_description_content_type = text/markdown
author = Amazon Web Services
author_email = aws-osml-admin@amazon.com
license =
    © 2023 Amazon Web Services, Inc. or its affiliates. All Rights Reserved.
    This AWS Content is provided subject to the terms of the AWS Customer Agreement
    available at http://aws.amazon.com/agreement or other written agreement between
    Customer and either Amazon Web Services, Inc. or Amazon Web Services EMEA SARL or both.
project_urls =
    Source = https://github.com/aws-solutions-library-samples/osml-tile-server
    Tracker = https://github.com/aws-solutions-library-samples/osml-tile-server/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.11
include_package_data = True

install_requires =
    uvicorn==0.31.*
    fastapi==0.115.*
    fastapi-versioning==0.10.*
    asgi-correlation-id==4.3.*
    cryptography==43.0.*
    boto3==1.35.*
    geojson==3.1.*
    python-json-logger==2.0.*
    osml-imagery-toolkit>=1.4.0rc4

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_data =
    = ["py.typed"]

[options.extras_require]
test =
    tox
